Revert "PLAT-112081: Fix Scroller: The scroll thumb and some text overlap."
This reverts commit 6e50f5cc8e85017e06d1c0fb3f6ef5751509de60.

--- a/useScroll/useScroll.module.less
+++ b/useScroll/useScroll.module.less
@@ -2,7 +2,6 @@
 //
 @import "../styles/colors.less";
 @import "../styles/variables.less";
-@import "../styles/mixins.less";
 
 .verticalPadding {
 	.padding-start-end(0, @sand-scrollbar-focusable-size - @sand-scrollbar-size);
@@ -16,10 +15,6 @@
 
 	&.focusableScrollbar {
 		--scroll-scrollbar-size: @sand-scrollbar-focusable-size;
-
-		&.hasVerticalScrollbar {
-			.padding-start-end(0, 24px);
-		}
 	}
 
 	.verticalScrollbar {
